Changelog for slideshowmanager.

SlideshowManager 1.0.1 pl 03/13/2012
===========================
 - Set end_date to be a required field
 - 

SlideshowManager 1.0.0 pl
===========================
 - made the auto installer to actually work!
 - updated Nivo jQuery slideshow
 - created an optional demo slideshow for first time installs 

SlideshowManager 1.0.0 rc
===========================
 - added auto installer

SlideshowManager 1.0.0 beta2
============================
 - IE upload fix for mime type

SlideshowManager 1.0.0 beta
============================
- Changed file paths from 'slideshow-manager' to 'slideshowmanager' 
    if you are upgrading you will need to copy /assets/components/slideshow-manager/uploads/ to 
    /assets/components/slideshowmanager/uploads/ for your current slideshows to work
- Now uses ExtJS Grid
- Lots of fixes

SlideshowManager 1.0.0 alpha
============================
- Initial commit