@@ -1,10 +1,13 @@
 Changelog for slideshowmanager.
 
+SlideshowManager 1.0.2 pl 04/16/2012
+===========================
+ - Fix PHP Notice Warning
+ 
 SlideshowManager 1.0.1 pl 03/13/2012
 ===========================
  - Set end_date to be a required field
- - 
-
+ 
 SlideshowManager 1.0.0 pl
 ===========================
  - made the auto installer to actually work!
